tests/spec/emit/snapshots/let_else_option_direct_call.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn get_value(s: string) -> Option<int> {
    if s == "ok" { Some(42) } else { None }
  }
  
  fn test() -> int {
    let Some(x) = get_value("ok") else { return 0; };
    x
  }
---
package main

func getValue(s string) (int, bool) {
	if s == "ok" {
		return 42, true
	}
	return 0, false
}

func test() int {
	x, ok := getValue("ok")
	if !ok {
		return 0
	}
	return x
}
