tests/spec/emit/snapshots/let_else_or_pattern_catchall_unused_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    let _ | _ = 1 else {
      panic("x")
    }
  }
---
package main

func test() {
	_ = 1
}
