tests/spec/emit/snapshots/let_else_or_pattern_else_scope_shadow.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum E {
    A(int),
    B(int),
    C,
  }
  fn test() {
    let x = 5
    let e = E.C
    let E.A(x) | E.B(x) = e else {
      if x != 5 { panic("shadow") }
      return
    }
    let _ = x
  }
---
package main

func MakeEA(arg0 int) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 int) E {
	return E{Tag: EB, B: arg0}
}

func MakeEC() E {
	return E{Tag: EC}
}

type ETag uint8

const (
	EA ETag = iota
	EB
	EC
)

type E struct {
	Tag ETag
	A   int
	B   int
}

func test() {
	x := 5
	e := MakeEC()
	var x_1 int
	if e.Tag == EA {
		x_1 = e.A
	} else if e.Tag == EB {
		x_1 = e.B
	} else {
		if x != 5 {
			panic("shadow")
		}
		return
	}
	_ = x_1
}
