tests/spec/emit/snapshots/let_else_or_pattern_irrefutable_binding.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let x | x = 42 else {
      return 0
    }
    x
  }
---
package main

func test() int {
	subject := 42
	var x int
	x = subject
	return x
}
