tests/spec/emit/snapshots/let_else_or_pattern_no_loop_wrapper.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum Val { A(int), B(int), C }
  
  fn test(items: Slice<Val>) -> int {
    let mut sum = 0
    for item in items {
      let Val.A(n) | Val.B(n) = item else {
        continue
      }
      sum += n
    }
    sum
  }
---
package main

func MakeValA(arg0 int) Val {
	return Val{Tag: ValA, A: arg0}
}

func MakeValB(arg0 int) Val {
	return Val{Tag: ValB, B: arg0}
}

func MakeValC() Val {
	return Val{Tag: ValC}
}

type ValTag uint8

const (
	ValA ValTag = iota
	ValB
	ValC
)

type Val struct {
	Tag ValTag
	A   int
	B   int
}

func test(items []Val) int {
	sum := 0
	for _, item := range items {
		var n int
		if item.Tag == ValA {
			n = item.A
		} else if item.Tag == ValB {
			n = item.B
		} else {
			continue
		}
		sum += n
	}
	return sum
}
