tests/spec/emit/snapshots/let_else_or_pattern_outer_preserved_when_pattern_uses_different_name.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum E {
    A(int),
    B(int),
    C,
  }
  fn test() {
    let x = 5
    let e = E.A(9)
    let E.A(y) | E.B(y) = e else {
      return
    }
    if y != 9 { panic("pattern") }
    if x != 5 { panic("outer") }
  }
---
package main

func MakeEA(arg0 int) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 int) E {
	return E{Tag: EB, B: arg0}
}

func MakeEC() E {
	return E{Tag: EC}
}

type ETag uint8

const (
	EA ETag = iota
	EB
	EC
)

type E struct {
	Tag ETag
	A   int
	B   int
}

func test() {
	x := 5
	e := MakeEA(9)
	var y int
	if e.Tag == EA {
		y = e.A
	} else if e.Tag == EB {
		y = e.B
	} else {
		return
	}
	if y != 9 {
		panic("pattern")
	}
	if x != 5 {
		panic("outer")
	}
}
