tests/spec/emit/snapshots/let_else_or_pattern_scope_leak_after.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nenum E {\n  A(int),\n  B(int),\n  C,\n}\nfn test() {\n  let x = 5\n  let _ = x\n  let e = E.A(9)\n  let E.A(x) | E.B(x) = e else {\n    return\n  }\n  if x != 5 { panic(\"shadow\") }\n}\n"
---
package main

import "fmt"

func MakeEA(arg0 int) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 int) E {
	return E{Tag: EB, B: arg0}
}

func MakeEC() E {
	return E{Tag: EC}
}

type ETag int

const (
	EA ETag = iota
	EB
	EC
)

type E struct {
	Tag ETag
	A   int
	B   int
}

func (e E) String() string {
	switch e.Tag {
	case EA:
		return fmt.Sprintf("E.A(%v)", e.A)
	case EB:
		return fmt.Sprintf("E.B(%v)", e.B)
	case EC:
		return "E.C"
	default:
		return fmt.Sprintf("E(%d)", e.Tag)
	}
}

func test() {
	_ = 5
	e := MakeEA(9)
	var x_1 int
	if e.Tag == EA {
		x_1 = e.A
	} else if e.Tag == EB {
		x_1 = e.B
	} else {
		return
	}
	if x_1 != 5 {
		panic("shadow")
	}
}
